{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 91,
  "lineage": "ab201c67-1f2d-44be-9336-54bcde202d6e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "common_ingress_sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "84.229.91.54/32"
            ],
            "description": "Just from WFH",
            "from_port": 22,
            "id": "sgrule-2004369533",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00667fa0c4287c695",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-ff7db0ce",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-158-151-61.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.158.151.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster-eu-central-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster-eu-central-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-fb64a9ca",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-52-29-155-224.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.29.155.224",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster-eu-central-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster-eu-central-1b",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-fa64a9cb",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-68-154-50.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.68.154.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster-eu-central-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster-eu-central-1c",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013470295104:internet-gateway/igw-0dc1455c2d3f85f0a",
            "id": "igw-0dc1455c2d3f85f0a",
            "owner_id": "013470295104",
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac33767a8e1f434d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-ff7db0ce",
            "connectivity_type": "public",
            "id": "nat-07736684eeeff8d52",
            "network_interface_id": "eni-0e1d69a23382f6914",
            "private_ip": "10.0.101.140",
            "public_ip": "18.158.151.61",
            "subnet_id": "subnet-0b4f2b6de35d2e672",
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster-eu-central-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster-eu-central-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-fb64a9ca",
            "connectivity_type": "public",
            "id": "nat-02b85e5afb55025a7",
            "network_interface_id": "eni-0faeafd8e3acd9e64",
            "private_ip": "10.0.102.30",
            "public_ip": "52.29.155.224",
            "subnet_id": "subnet-06ba3f77d480a06f3",
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster-eu-central-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster-eu-central-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-fa64a9cb",
            "connectivity_type": "public",
            "id": "nat-0d734f9ca0150a117",
            "network_interface_id": "eni-01b5a758a17a6b6db",
            "private_ip": "10.0.103.223",
            "public_ip": "3.68.154.50",
            "subnet_id": "subnet-0cb40ad6ec9e3a074",
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster-eu-central-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster-eu-central-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02ef278de44d0030b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07736684eeeff8d52",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02ef278de44d0030b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06672347be69afc221080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02b85e5afb55025a7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06672347be69afc22",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09e3ebca37ac0008f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d734f9ca0150a117",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09e3ebca37ac0008f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dc1455c2d3f85f0a",
            "id": "r-rtb-045612e5f9e63e16b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-045612e5f9e63e16b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013470295104:route-table/rtb-02ef278de44d0030b",
            "id": "rtb-02ef278de44d0030b",
            "owner_id": "013470295104",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster-private-eu-central-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster-private-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac33767a8e1f434d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013470295104:route-table/rtb-06672347be69afc22",
            "id": "rtb-06672347be69afc22",
            "owner_id": "013470295104",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster-private-eu-central-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster-private-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac33767a8e1f434d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013470295104:route-table/rtb-09e3ebca37ac0008f",
            "id": "rtb-09e3ebca37ac0008f",
            "owner_id": "013470295104",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster-private-eu-central-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster-private-eu-central-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac33767a8e1f434d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013470295104:route-table/rtb-045612e5f9e63e16b",
            "id": "rtb-045612e5f9e63e16b",
            "owner_id": "013470295104",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac33767a8e1f434d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012a9b760ab231f71",
            "route_table_id": "rtb-02ef278de44d0030b",
            "subnet_id": "subnet-02d0bee39a43bd247"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b37068fdfbf1c80c",
            "route_table_id": "rtb-06672347be69afc22",
            "subnet_id": "subnet-00ba01641cccae664"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fddc2c2150aa3008",
            "route_table_id": "rtb-09e3ebca37ac0008f",
            "subnet_id": "subnet-0db96d18a7796fed7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057ad5b4306a38322",
            "route_table_id": "rtb-045612e5f9e63e16b",
            "subnet_id": "subnet-0b4f2b6de35d2e672"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb67cba5cadcb71c",
            "route_table_id": "rtb-045612e5f9e63e16b",
            "subnet_id": "subnet-06ba3f77d480a06f3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bce5950a72ed3712",
            "route_table_id": "rtb-045612e5f9e63e16b",
            "subnet_id": "subnet-0cb40ad6ec9e3a074"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013470295104:subnet/subnet-02d0bee39a43bd247",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02d0bee39a43bd247",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013470295104",
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster-private-eu-central-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster-private-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac33767a8e1f434d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013470295104:subnet/subnet-00ba01641cccae664",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00ba01641cccae664",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013470295104",
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster-private-eu-central-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster-private-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac33767a8e1f434d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013470295104:subnet/subnet-0db96d18a7796fed7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0db96d18a7796fed7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013470295104",
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster-private-eu-central-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster-private-eu-central-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac33767a8e1f434d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013470295104:subnet/subnet-0b4f2b6de35d2e672",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0b4f2b6de35d2e672",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "013470295104",
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster-public-eu-central-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster-public-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac33767a8e1f434d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013470295104:subnet/subnet-06ba3f77d480a06f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-06ba3f77d480a06f3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "013470295104",
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster-public-eu-central-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster-public-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac33767a8e1f434d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013470295104:subnet/subnet-0cb40ad6ec9e3a074",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-0cb40ad6ec9e3a074",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "013470295104",
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster-public-eu-central-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster-public-eu-central-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac33767a8e1f434d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013470295104:vpc/vpc-0ac33767a8e1f434d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d5f4caa4b0b3b9b",
            "default_route_table_id": "rtb-0d17749eb5845cdee",
            "default_security_group_id": "sg-00667fa0c4287c695",
            "dhcp_options_id": "dopt-a853cfc2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ac33767a8e1f434d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d17749eb5845cdee",
            "owner_id": "013470295104",
            "tags": {
              "Environment": "radware",
              "Name": "radware-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "radware",
              "Name": "radware-cluster",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}